@@ -1,0 +1,8 @@
+@<TRIPOS>MOLECULE
+sodium(1+) ion
+1 0 1
+SMALL
+USER_CHARGES
+@<TRIPOS>ATOM
+1	Na1     0.0000     0.0000     0.0000	Na	1	UNK1	1.0000
+@<TRIPOS>BOND
